--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- Arrival Section -->
         <section id="arrival">
             <h2>Arrival and First Impressions</h2>
-            <p>We began early in the morning, eager and inquisitive about the day that lay before us. Following a spirited bus journey replete with music and conversation, we arrived at the museum at 10 a.m. As soon as we walked in, we were warmly welcomed by a peaceful ambiance — traditional homes, tiled roofs, open courtyards, and sculptures placed amidst foliage. It was almost as if we had entered another era altogether.</p>
+            <p>We began early in the morning, eager and inquisitive about the day that lay before us. Following a spirited bus journey replete with music and conversation. As soon as we walked in, we were warmly welcomed by a peaceful ambiance — traditional homes, tiled roofs, open courtyards, and sculptures placed amidst foliage. It was almost as if we had entered another era altogether.</p>
             
             <div class="gallery">
                 <div class="gallery-item">
@@ -138,4 +138,5 @@
     
     <link rel="stylesheet" href="script.js">
 </body>
+
 </html>
